# bssh

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md  example-config.yaml  test_backendai_env.sh  test_curl_blocking  test_debug  test_debug.rs  test_empty_value  test_empty_value.rs  test_glob.sh  test_security.rs  test_sftp.sh
.cargo/: audit.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  debian_build.yml  launchpad_ppa.yml  osv-scanner.yml  release.yml  update_homebrew_formula.yml
benches/: large_output_benchmark.rs
crates/bssh-cryptovec/: Cargo.toml
crates/bssh-russh/: Cargo.toml  README.md  create-patch.sh  sync-upstream.sh
crates/bssh-russh-sftp/: Cargo.toml  README.md  create-patch.sh  sync-upstream.sh
crates/bssh-russh-sftp/patches/: pipelined-file-io.patch  sftp-serde-bytes-perf.patch
crates/bssh-russh-sftp/src/: de.rs  lib.rs  ser.rs
crates/bssh-russh-sftp/src/client/: session.rs
crates/bssh-russh-sftp/src/client/fs/: file.rs
crates/bssh-russh-sftp/src/protocol/: mod.rs
crates/bssh-russh-sftp/src/server/: mod.rs
crates/bssh-russh-util/: Cargo.toml
crates/bssh-russh/patches/: agent-frame-length-cap.patch  channel-write-ordering.patch  handle-data-fix.patch  sha1-mac-exclude.patch
crates/bssh-russh/src/: compression.rs  lib_inner.rs  session.rs  ssh_read.rs
crates/bssh-russh/src/client/: encrypted.rs  mod.rs  session.rs
crates/bssh-russh/src/kex/: none.rs
crates/bssh-russh/src/kex/dh/: mod.rs
crates/bssh-russh/src/keys/: known_hosts.rs  mod.rs
crates/bssh-russh/src/keys/agent/: client.rs  server.rs
crates/bssh-russh/src/server/: encrypted.rs  mod.rs  session.rs
crates/bssh-russh/tests/: pty_handle_data.rs
debian/: README.packaging  changelog  control  control.binary  control.bssh-keygen.binary  control.bssh-server.binary  control.source  copyright  get-next-ppa-version.sh  manpages  prepare-source-package.sh  rules  rules.binary  rules.bssh-keygen.binary  rules.bssh-server.binary  rules.launchpad  rules.launchpad-simple  rules.source  sanitize-vendor.py  update-changelog.sh
docs/: README.md  UPSTREAM_PR_RUSSH.md  audit-logging.md  container-deployment.md  pdsh-examples.md  pdsh-migration.md  pdsh-options.md  quick-start.md  security.md
docs/architecture/: README.md  cli-interface.md  configuration.md  executor.md  exit-code-strategy.md  interactive-mode.md  server-configuration.md  ssh-client.md  ssh-config-parser.md  ssh-jump-hosts.md  ssh-port-forwarding.md  tui.md
docs/man/: bssh-keygen.1  bssh-server.8  bssh.1
docs/shell-config/: README.md  bash.sh  fish.fish  zsh.sh
examples/: health_check.sh  interactive_demo.rs  mpi_exit_code.sh
src/: cli.rs  config.rs  executor.rs  lib.rs  main.rs  node.rs  security.rs  ui.rs
src/app/: cache.rs  dispatcher.rs  initialization.rs  initialization_tests.rs  mod.rs  nodes.rs  query.rs  utils.rs
src/cli/: bssh.rs  mod.rs  mode_detection_tests.rs  pdsh.rs
src/commands/: download.rs  exec.rs  interactive.rs  interactive_signal.rs  interactive_unit_test.rs  list.rs  mod.rs  ping.rs  upload.rs
src/commands/interactive/: commands.rs  connection.rs  execution.rs  mod.rs  multiplex.rs  single_node.rs  types.rs  utils.rs
src/config/: interactive.rs  loader.rs  mod.rs  resolver.rs  tests.rs  types.rs  utils.rs
src/executor/: connection_manager.rs  execution_strategy.rs  exit_strategy.rs  mod.rs  output_mode.rs  output_sync.rs  parallel.rs  rank_detector.rs  result_types.rs  stream_manager.rs
src/forwarding/: dynamic.rs  local.rs  manager.rs  mod.rs  remote.rs  spec.rs  tunnel.rs
src/forwarding/dynamic/: connection.rs  forwarder.rs  mod.rs  socks.rs  stats.rs
src/hostlist/: error.rs  expander.rs  mod.rs  parser.rs
src/jump/: chain.rs  connection.rs  mod.rs  parser.rs  rate_limiter.rs
src/jump/chain/: auth.rs  chain_connection.rs  cleanup.rs  tunnel.rs  types.rs
src/jump/parser/: config.rs  host.rs  host_parser.rs  main_parser.rs  mod.rs  tests.rs
src/keygen/: ed25519.rs  mod.rs  rsa.rs
src/pty/: mod.rs  session.rs  terminal.rs
src/pty/session/: constants.rs  escape_filter.rs  input.rs  local_escape.rs  mod.rs  raw_input.rs  session_manager.rs  (+1 more)
src/security/: mod.rs  password.rs  sudo.rs  validation.rs
src/server/: config.rs  exec.rs  handler.rs  mod.rs  pty.rs  scp.rs  session.rs  sftp.rs  shell.rs
src/sftp/: auth.rs  client.rs  error.rs  host_verification.rs  mod.rs  operations.rs  pool.rs  session.rs
src/shared/: auth_types.rs  error.rs  mod.rs  rate_limit.rs  validation.rs
src/ssh/: auth.rs  client.rs  config_cache.rs  handler.rs  keychain_macos.rs  known_hosts.rs  mod.rs  pool.rs  ssh_config.rs
src/test_helpers/: env_guard.rs  mod.rs
src/ui/: basic.rs  mod.rs
src/utils/: buffer_pool.rs  fs.rs  logging.rs  mod.rs  output.rs  sanitize.rs
test_keys/: ssh_host_ed25519_key  ssh_host_ed25519_key.pub  test_user_ed25519  test_user_ed25519.pub
tests/: backendai_env_test.rs  broadcast_command_test.rs  config_save_test.rs  connect_timeout_test.rs  copy_test.rs  download_test.rs  error_handling_integration.rs  error_handling_test.rs  executor_file_transfer_test.rs  exit_code_integration_test.rs  fail_fast_test.rs  glob_pattern_test.rs  integration_test.rs  interactive_integration_test.rs  interactive_signal_test.rs  interactive_test.rs  jump_host_auth_mutex_test.rs  jump_host_config_test.rs  jump_host_empty_agent_test.rs  jump_host_timeout_test.rs  no_prefix_test.rs  node_prompt_scaling_test.rs  node_switching_test.rs  password_fallback_test.rs  pdsh_compat_test.rs  pty_integration_test.rs  pty_stress_test.rs  pty_utils_test.rs  scp_sftp_path_resolution_test.rs  ssh_config_command_options_advanced_test.rs  ssh_config_command_options_test.rs  ssh_keepalive_test.rs  streaming_integration_tests.rs  streaming_test.rs  test_bssh_server.sh  test_bssh_server_quick.sh  timeout_test.rs  tui_event_tests.rs  tui_snapshot_tests.rs  upload_test.rs
tests/common/: mod.rs
tests/pdsh_compat/: README.md  run_all_tests.sh  test_basic.sh  test_hostlist.sh  test_options.sh
tools/bench/: README.md  bench.sh  lib.sh  profile.sh
(+112 files in other folders)
