[package]
name = "bssh"
version = "0.8.0"
authors = ["Jeongkyu Shin <inureyes@gmail.com>"]
description = "Parallel SSH command execution tool for cluster management"
license = "Apache-2.0"
repository = "https://github.com/lablup/bssh"
readme = "README.md"
keywords = ["cli", "rust"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
russh = "0.54.6"
russh-sftp = "2.1.1"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1.0.99"
thiserror = "2.0.16"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9"
futures = "0.3.31"
async-trait = "0.1.89"
indicatif = "0.18.0"
rpassword = "7.4.0"
directories = "6.0.0"
dirs = "6.0"
chrono = "0.4.41"
glob = "0.3.3"
whoami = "1.6.1"
owo-colors = "4.2.2"
unicode-width = "0.2.1"
terminal_size = "0.4.3"
once_cell = "1.20"
zeroize = "1.8"
rustyline = "17.0.1"
crossterm = "0.29"
ctrlc = "3.4"
signal-hook = "0.3.18"
atty = "0.2.14"
arrayvec = "0.7.6"
smallvec = "1.13.2"
lru = "0.16"
uuid = { version = "1.10", features = ["v4"] }
fastrand = "2.2"
tokio-util = "0.7"

[dev-dependencies]
tempfile = "3"
mockito = "1"
once_cell = "1.21.3"
tokio-test = "0.4"
serial_test = "3.2"
