[workspace]
members = [
    ".",
    "crates/bssh-russh",
    "crates/bssh-cryptovec",
    "crates/bssh-russh-util",
]

[package]
name = "bssh"
version = "1.7.0"
authors = ["Jeongkyu Shin <inureyes@gmail.com>"]
description = "Parallel SSH command execution tool for cluster management"
license = "Apache-2.0"
repository = "https://github.com/lablup/bssh"
readme = "README.md"
keywords = ["cli", "rust"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
# Use our internal russh fork with session loop fixes
russh = { package = "bssh-russh", path = "crates/bssh-russh" }
russh-sftp = "2.1.1"
clap = { version = "4.5.53", features = ["derive", "env"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9"
futures = "0.3.31"
async-trait = "0.1.89"
indicatif = "0.18.3"
rpassword = "7.4.0"
directories = "6.0.0"
dirs = "6.0"
chrono = "0.4.42"
glob = "0.3.3"
whoami = "2.0.1"
owo-colors = "4.2.3"
unicode-width = "0.2.2"
terminal_size = "0.4.3"
once_cell = "1.21.3"
zeroize = { version = "1.8.2", features = ["derive"] }
secrecy = { version = "0.10.3", features = ["serde"] }
rustyline = "17.0.2"
crossterm = "0.29"
ratatui = "0.30"
regex = "1.12.2"
lazy_static = "1.5"
ctrlc = "3.5.1"
signal-hook = "0.4.1"
nix = { version = "0.30", features = ["fs", "poll", "process", "signal", "term"] }
atty = "0.2.14"
arrayvec = "0.7.6"
smallvec = "1.15.1"
lru = "0.16.2"
uuid = { version = "1.19.0", features = ["v4"] }
fastrand = "2.3.0"
tokio-util = "0.7.17"
shell-words = "1.1.1"
libc = "0.2"
ipnetwork = "0.20"
bcrypt = "0.16"
argon2 = "0.5"
rand = "0.8"
ssh-key = { version = "0.6", features = ["std"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.5.1"

[dev-dependencies]
tempfile = "3.23.0"
mockito = "1.7.1"
once_cell = "1.21.3"
tokio-test = "0.4"
serial_test = "3.2"
insta = "1.44"
criterion = { version = "0.8", features = ["html_reports"] }
mockall = "0.14"

[[bench]]
name = "large_output_benchmark"
harness = false

[[bin]]
name = "bssh-server"
path = "src/bin/bssh_server.rs"

