[package]
name = "bssh-cryptovec"
version = "0.1.0"
edition = "2021"
description = "A vector which zeroes its memory on clears and reallocations (internal bssh crate)"

[dependencies]
ssh-encoding = { version = "0.2", features = ["bytes"], optional = true }
log = "0.4"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["mman"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = [
    "basetsd",
    "minwindef",
    "memoryapi",
    "errhandlingapi",
    "sysinfoapi",
    "impl-default",
] }
libc = "0.2"

[features]
default = []
ssh-encoding = ["dep:ssh-encoding"]
