[package]
name = "bssh-russh-sftp"
version = "2.1.2"
authors = ["Jeongkyu Shin <inureyes@gmail.com>"]
description = "Temporary fork of russh-sftp 2.1.2 adding pipelined SFTP File I/O (write_all_pipelined / read_to_writer_pipelined). Note: the serde_bytes perf fix that originally motivated this fork is now upstreamed in russh-sftp 2.1.2; only the pipelined helpers remain as fork value-add."
documentation = "https://docs.rs/bssh-russh-sftp"
edition = "2021"
homepage = "https://github.com/lablup/bssh"
keywords = ["russh", "sftp", "ssh2", "server", "client"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/lablup/bssh"

[dependencies]
tokio = { version = "1", default-features = false, features = [
    "io-util",
    "rt",
    "sync",
    "time",
    "macros",
] }
tokio-util = "0.7.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11"
bitflags = { version = "2.11.1", features = ["serde"] }
async-trait = { version = "0.1.89", optional = true }

# futures: required by our forward-ported pipelined helpers
# (write_all_pipelined / read_to_writer_pipelined use FuturesUnordered).
# Upstream russh-sftp 2.1.2 does not need this dependency.
futures = { version = "0.3.32", default-features = false, features = ["std", "async-await"] }

thiserror = "2.0.18"
chrono = "0.4.44"
bytes = "1.11.1"
log = "0.4.29"
dashmap = "6.1.0"

[features]
async-trait = ["dep:async-trait"]
