[package]
name = "bssh-russh-sftp"
version = "2.3.0"
authors = ["Jeongkyu Shin <inureyes@gmail.com>"]
description = "Temporary fork of russh-sftp tracking upstream 2.3.0; only delta is the proposed `read_to_writer_pipelined` helper (AspectUnk/russh-sftp#91)"
documentation = "https://docs.rs/bssh-russh-sftp"
edition = "2021"
homepage = "https://github.com/lablup/bssh"
keywords = ["russh", "sftp", "ssh2", "server", "client"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/lablup/bssh"

[dependencies]
tokio = { version = "1", default-features = false, features = [
    "io-util",
    "rt",
    "sync",
    "time",
    "macros",
] }
tokio-util = { version = "0.7.18", default-features = false, features = ["rt"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
bitflags = { version = "2.11.1", features = ["serde"] }
async-trait = { version = "0.1.89", optional = true }

thiserror = "2.0.18"
chrono = "0.4.44"
bytes = "1.11.1"
log = "0.4.29"
dashmap = "6.1.0"

futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.71"
gloo-timers = { version = "0.4.0", features = ["futures"] }

[features]
async-trait = ["dep:async-trait"]
