[package]
name = "bssh-russh"
version = "0.1.0"
edition = "2021"
description = "SSH server implementation for bssh (based on russh)"

[features]
default = ["flate2", "aws-lc-rs", "rsa"]
_bench = []  # Internal benchmark feature
aws-lc-rs = ["dep:aws-lc-rs"]
async-trait = ["dep:async-trait"]
legacy-ed25519-pkcs8-parser = ["yasna"]
des = ["dep:des"]
dsa = ["ssh-key/dsa"]
ring = ["dep:ring"]
rsa = ["dep:rsa", "dep:pkcs1", "ssh-key/rsa", "ssh-key/rsa-sha1"]

[dependencies]
aes = "0.8"
async-trait = { version = "0.1.50", optional = true }
aws-lc-rs = { version = "1.13.1", optional = true }
bitflags = "2.0"
block-padding = { version = "0.3", features = ["std"] }
byteorder = "1.4"
bytes = "1.7"
cbc = "0.1"
ctr = "0.9"
curve25519-dalek = "4.1.3"
data-encoding = "2.3"
delegate = "0.13"
digest = "0.10"
der = "0.7"
des = { version = "0.8.1", optional = true }
ecdsa = "0.16"
ed25519-dalek = { version = "2.0", features = ["rand_core", "pkcs8"] }
elliptic-curve = { version = "0.13", features = ["ecdh"] }
enum_dispatch = "0.3.13"
flate2 = { version = "1.0.15", optional = true }
futures = "0.3"
generic-array = { version = "1.3.3", features = ["compat-0_14"] }
getrandom = { version = "0.2.15", features = ["js"] }
hex-literal = "0.4"
hmac = "0.12"
inout = { version = "0.1", features = ["std"] }
libcrux-ml-kem = "0.0.4"
log = "0.4"
md5 = "0.7"
num-bigint = { version = "0.4.2", features = ["rand"] }
p256 = { version = "0.13", features = ["ecdh"] }
p384 = { version = "0.13", features = ["ecdh"] }
p521 = { version = "0.13", features = ["ecdh"] }
pbkdf2 = "0.12"
pkcs1 = { version = "0.8.0-rc.4", optional = true }
pkcs5 = "0.7"
pkcs8 = { version = "0.10", features = ["pkcs5", "encryption", "std"] }
rand_core = { version = "0.6.4", features = ["getrandom", "std"] }
rand = "0.8"
ring = { version = "0.17.14", optional = true }
rsa = { version = "0.10.0-rc.10", optional = true }
sec1 = { version = "0.7", features = ["pkcs8", "der"] }
sha1 = { version = "0.10.5", features = ["oid"] }
sha2 = { version = "0.10.6", features = ["oid"] }
signature = "2.2"
spki = "0.7"
ssh-encoding = { version = "0.2", features = ["bytes"] }
subtle = "2.4"
thiserror = "1.0.30"
tokio = { version = "1.48.0", features = ["io-util", "sync", "time", "rt-multi-thread", "net"] }
typenum = "1.17"
yasna = { version = "0.5.0", features = ["bit-vec", "num-bigint"], optional = true }
zeroize = "1.7"
home = "0.5"

# Public russh crates (no modifications needed)
russh-cryptovec = { version = "0.52.0", features = ["ssh-encoding"] }
russh-util = "0.52.0"

# Use the forked ssh-key from russh
ssh-key = { version = "=0.6.16", features = [
    "ed25519",
    "p256",
    "p384",
    "p521",
    "encryption",
    "ppk",
    "hazmat-allow-insecure-rsa-keys",
], package = "internal-russh-forked-ssh-key" }
