[package]
name = "bssh-russh"
version = "0.60.0"
authors = ["Jeongkyu Shin <inureyes@gmail.com>"]
description = "Temporary fork of russh with high-frequency PTY output fix (Handle::data from spawned tasks)"
documentation = "https://docs.rs/bssh-russh"
edition = "2021"
homepage = "https://github.com/lablup/bssh"
keywords = ["ssh"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/lablup/bssh"

[features]
default = ["flate2", "aws-lc-rs", "rsa"]
_bench = []  # Internal benchmark feature
aws-lc-rs = ["dep:aws-lc-rs"]
async-trait = ["dep:async-trait"]
legacy-ed25519-pkcs8-parser = ["yasna"]
des = ["dep:des"]
dsa = ["ssh-key/dsa"]
ring = ["dep:ring"]
rsa = ["dep:rsa", "dep:pkcs1", "ssh-key/rsa", "ssh-key/rsa-sha1"]
serde = ["ssh-key/serde"]

[dependencies]
aes = "0.8"
async-trait = { version = "0.1.50", optional = true }
aws-lc-rs = { version = "1.16.2", optional = true }
bitflags = "2.0"
block-padding = { version = "0.3", features = ["std"] }
byteorder = "1.4"
bytes = "1.7"
cbc = { version = "0.1" }
cipher = "0.5.1"
ctr = "0.9"
curve25519-dalek = "5.0.0-pre.6"
crypto-bigint = { version = "0.7.0-rc.28", features = ["alloc"] }
data-encoding = "2.3"
delegate = "0.13"
digest = "0.10"
der = "0.8"
des = { version = "0.8.1", optional = true }
ecdsa = "0.17.0-rc.16"
ed25519-dalek = { version = "3.0.0-pre.6", features = ["alloc", "rand_core", "pkcs8"] }
elliptic-curve = { version = "0.14.0-rc.30", features = ["ecdh"] }
enum_dispatch = "0.3.13"
flate2 = { version = "1.0.15", optional = true }
futures = "0.3"
generic-array = { version = "1.3.3", features = ["compat-0_14"] }
getrandom = { version = "0.2.15", features = ["js"] }
hex-literal = "1"
hmac = "0.12"
inout = { version = "0.1", features = ["std"] }
log = "0.4"
md5 = "0.7"
ml-kem = "0.3.0-rc.2"
module-lattice = "0.2"
# num-bigint 0.4.x only supports rand 0.8; upstream russh ships a fork that
# adds rand 0.10 support via the `rand_0_10` feature flag.
num-bigint = { package = "internal-russh-num-bigint", version = "=0.5.0", features = ["rand_0_10"] }
p256 = { version = "0.14.0-rc.8", features = ["ecdh"] }
p384 = { version = "0.14.0-rc.8", features = ["ecdh"] }
p521 = { version = "0.14.0-rc.8", features = ["ecdh"] }
pbkdf2 = "0.12"
pkcs1 = { version = "0.8.0-rc.4", optional = true }
pkcs5 = "0.8.0-rc.13"
pkcs8 = { version = "0.11.0-rc.11", features = ["encryption", "std"] }
polyval = "0.7.1"
rand_core = { version = "0.10.0" }
rand = { version = "0.10", features = ["thread_rng"] }
ring = { version = "0.17.14", optional = true }
rsa = { version = "0.10.0-rc.17", optional = true }
sec1 = { version = "0.8", features = ["der"] }
sha1 = { version = "0.10.5", features = ["oid"] }
sha2 = { version = "0.10.6", features = ["oid"] }
signature = "3.0.0-rc.10"
spki = "0.8.0"
ssh-encoding = { version = "0.2", features = ["bytes"] }
subtle = "2.4"
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["io-util", "sync", "time", "rt-multi-thread", "net"] }
typenum = "1.17"
universal-hash = "0.6.1"
yasna = { version = "0.5.0", features = ["bit-vec", "num-bigint"], optional = true }
zeroize = "1.7"

# Public russh crates (no modifications needed)
russh-cryptovec = { version = "0.59.0", features = ["ssh-encoding"] }
russh-util = "0.52.0"

# Use the forked ssh-key from russh
ssh-key = { version = "=0.6.18", features = [
    "ed25519",
    "p256",
    "p384",
    "p521",
    "encryption",
    "ppk",
    "hazmat-allow-insecure-rsa-keys",
], package = "internal-russh-forked-ssh-key" }
